helm-chart/grafana-nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nlb
spec:
  type: LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
