helm-chart/prometheus-nlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nlb
spec:
  type: LoadBalancer
  selector:
    app: prometheus
  ports:
  - port: 80
    targetPort: 9090
